# LearnComputerGraphics

./: .gitattributes  .gitignore  OpenGL.code-workspace  OpenGL.sln  README.md  imgui.ini
1_GettingStarted/1_HelloWindow/: CMakeLists.txt  HelloWindow.cpp
1_GettingStarted/2_HelloTriangle/: CMakeLists.txt  Exercise1.cpp  Exercise2.cpp  Exercise3.cpp  HelloTriangle.cpp  Main.cpp
1_GettingStarted/3_Shaders/: CMakeLists.txt  Exercise1.cpp  Exercise3.cpp  Main.cpp  MaxVertexAttributes.cpp  MoreAttributes.cpp  SendColor.cpp
1_GettingStarted/4_Textures/: CMakeLists.txt  Exercise.cpp  Exercise1.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp  Main.cpp  TextureWrapping.cpp
1_GettingStarted/5_Transformations/: CMakeLists.txt  Exercise.cpp  Exercise1.cpp  Main.cpp  Transformations.cpp
1_GettingStarted/6_CoordinateSystems/: CMakeLists.txt  Exercise.cpp  Exercise2.cpp  Exercise3.cpp  Main.cpp  More3D.cpp
1_GettingStarted/7_Camera/: CMakeLists.txt  Exercise.cpp  Exercise1.cpp  Exercise2.cpp  LookAround.cpp  LookAtMatrix.cpp  Main.cpp  Zoom.cpp
1_GettingStarted/ImGuiTemplate/: CMakeLists.txt  ImGuiTemplate.cpp
1_Getting_Started/: GLFWWindowTemplate.cpp  IMGUITemplate.cpp  SimpleWindow.cpp
1_Getting_Started/1_HelloWindow/: CMakeLists.txt
1_Getting_Started/1_Hello_Window/: CMakeLists.txt  SinpleWindow.cpp
1_Getting_Started/2_HelloTriangle/: CMakeLists.txt
1_Getting_Started/2_Hello_Triangle/: CMakeLists.txt  Triangle.cpp
1_Getting_Started/3_Shaders/: CMakeLists.txt  Exercise.cpp  Main.cpp  MaxVertexAttribs.cpp  MaxVertexAttributes.cpp  MoreAttributes.cpp  SendColor.cpp  Uniform.cpp
1_Getting_Started/4_Textures/: Exercise.cpp  Exercise1.cpp  TextureWrapping.cpp
1_Getting_Started/5_Transformations/: CMakeLists.txt  Exercise.cpp  TestGLM.cpp
1_Getting_Started/6_CoordinateSystems/: CMakeLists.txt  Exercise.cpp  More3D.cpp
1_Getting_Started/6_Coordinate_Systems/: Exercise.cpp
1_Getting_Started/7_Camera/: CMakeLists.txt  Exercise.cpp  LookAround.cpp  LookAtMatrix.cpp  Main.cpp  Zoom.cpp
1_Getting_Started/ImGuiTemplate/: CMakeLists.txt
2_Lighting/: TemplateForLighting.cpp
2_Lighting/1_Colors/: CMakeLists.txt  Colors.cpp
2_Lighting/2_BasicLighting/: CMakeLists.txt  Exercise.cpp  Exercise1.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp  ExerciseGouraud.cpp  Lighting.cpp  Main.cpp
2_Lighting/2_Basic_Lighting/: Exercise.cpp  ExerciseGouraud.cpp  Lighting.cpp
2_Lighting/3_Materials/: CMakeLists.txt  Exercise.cpp  Exercise1.cpp  Exercise2.cpp  Main.cpp  Materials.cpp
2_Lighting/4_LightingMaps/: CMakeLists.txt  DiffuseMap.cpp  Exercise.cpp  Exercise1.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp  Main.cpp  SpecularMap.cpp
2_Lighting/4_Lighting_Maps/: DiffuseMap.cpp  Exercise.cpp  SpecularMap.cpp
2_Lighting/5_LightCasters/: CMakeLists.txt  Light.cpp  LightCasters.cpp
2_Lighting/5_Light_Casters/: Light.cpp
2_Lighting/6_MultipleLights/: CMakeLists.txt  MultipleLights.cpp
2_Lighting/6_Multiple_Lights/: MultipleLights.cpp  (+1 more)
3_Model_Loading/: TemplateForModelLoading.cpp
4_Advanced_OpenGL/: TemplateForAdvancedOpenGL.cpp
5_AdvancedLighting/: TemplateForAdvancedLighting.cpp
5_Advanced_Lighting/: TemplateForAdvancedLighting.cpp
7_InPractice/1_Debugging/: CMakeLists.txt  Debugging.cpp
GAMES101/: .gitignore  README.md
GAMES101/Assignment1/: CMakeLists.txt  main.cpp
GAMES101/Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/Assignment3/: CMakeLists.txt  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/Assignment4/: CMakeLists.txt  main.cpp
GAMES101/Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
GAMES101/Assignment5/images/: binary.ppm
LearnOpenGL/: .gitattributes  CMakeLists.txt
LearnOpenGL/1_GettingStarted/1_HelloWindow/: CMakeLists.txt
OpenGL/: FragmentShader.glsl  FragmentShader1.glsl  FragmentShader2.glsl  FragmentShader3.glsl  FragmentShader4.glsl  FragmentShaderBloom.glsl  FragmentShaderBloomQuad.glsl  FragmentShaderDeferred.glsl  FragmentShaderGaussianBlur.glsl  FragmentShaderLight1.glsl  FragmentShaderModel.glsl  FragmentShaderNormalMapping.glsl  FragmentShaderParallaxMapping.glsl  FragmentShaderQuad1.glsl  FragmentShaderShadow1.glsl  FragmentShaderShadow3.glsl  FragmentShaderShadow4.glsl  FragmentShaderUBO1.glsl  GeometryShader.glsl  GeometryShaderFrame.glsl  GeometryShaderShadow3.glsl  IBL.cpp  OpenGL.rc  OpenGL.vcxproj  OpenGL.vcxproj.filters  OpenGL1.rc  PBR.cpp  PBR1.cpp  QuadFragmentShader.glsl  VertexShader.glsl  VertexShader2.glsl  VertexShader3.glsl  VertexShader4.glsl  VertexShaderBloom.glsl  VertexShaderBloomQuad.glsl  VertexShaderDeferred.glsl  VertexShaderGaussianBlur.glsl  VertexShaderHDR.glsl  VertexShaderHDROBJ.glsl  VertexShaderInstance.glsl  (+23 more)
OpenGL.xcodeproj/: project.pbxproj
Others/: CMakeLists.txt  DebugQuadVS.vert  GBufferVS.vert  Main.cpp  Point.geom  Point.vert
Scripts/: CMakeLists.txt  Helper.cpp  IBL.cpp  IBL1.cpp  Mesh.cpp  Model.cpp  PBR.cpp  PBR1.cpp  Shader.cpp  Utils.cpp  shader.cpp  template.cpp
Scripts/include/: Camera.h  FuncSet.h  Mesh.h  Shader.h  Utils.h  camera.h  mesh.h  model.h  shader.h  utils.h
Scripts/python/: rename.py
Src/: FragmentShader2.glsl  FragmentShader3.glsl  FragmentShader4.glsl  FragmentShaderDeferred.glsl  FragmentShaderDraw.glsl  FragmentShaderHDR.glsl  FragmentShaderHDROBJ.glsl  FragmentShaderLight.glsl  FragmentShaderModel.glsl  FragmentShaderPBR1.glsl  FragmentShaderPlane.glsl  FragmentShaderQuad2.glsl  FragmentShaderSSAO.glsl  FragmentShaderSSAOBlur.glsl  FragmentShaderShadow2.glsl  FragmentShaderSimpleColor.glsl  FragmentShaderSkybox.glsl  FragmentShaderUBO2.glsl  FragmentShaderUBO3.glsl  FragmentShaderUBO4.glsl  GeometryShader.glsl  IBL1.cpp  PBR1.cpp  VertexShader4.glsl  VertexShaderBloom.glsl  VertexShaderDraw.glsl  VertexShaderInstance.glsl  VertexShaderLight1.glsl  VertexShaderQuad.glsl  VertexShaderShadow4.glsl  VertexShaderSkybox.glsl  chapter2.cpp  chapter3.cpp  chapter4.cpp  glad.c  shader.cpp
Temp/: DebugQuadFS.frag  Main.cpp  Point.geom  Point.vert  PostProcessingSharpen.frag
(+471 files in other folders)
